Version 3.12.3 (rgerhards), 2008-03-??
- added advanced flow control for congestion cases (mode depending on message
  source and its capablity to be delayed without bad side effects)
- bugfix: $ModDir should not be reset on $ResetConfig - this can cause a lot
  of confusion and there is no real good reason to do so. Also conflicts with
  the new -M option and environment setting.
- some more internal cleanup ;)
---------------------------------------------------------------------------
Version 3.12.2 (rgerhards), 2008-03-13
- added RSYSLOGD_MODDIR environment variable
- added -M rsyslogd option (allows to specify module directory location)
- converted net.c into a loadable library plugin
- bugfix: debug module now survives unload of loadable module when
  printing out function call data
- bugfix: not properly initialized data could cause several segfaults if
  there were errors in the config file - thanks to varmojfekoj for the patch
- bugfix: rsyslogd segfaulted when imfile read an empty line - thanks
  to Johnny Tan for an excellent bug report
- implemented dynamic module unload capability (not visible to end user)
- some more internal cleanup
- bugfix: imgssapi segfaulted under some conditions; this fix is actually
  not just a fix but a change in the object model. Thanks to varmojfekoj
  for providing the bug report, an initial fix and lots of good discussion
  that lead to where we finally ended up.
---------------------------------------------------------------------------
Version 3.12.1 (rgerhards), 2008-03-06
- added library plugins, which can be automatically loaded
- bugfix: actions were not correctly retried; caused message loss
- changed module loader to automatically add ".so" suffix if not
  specified (over time, this shall also ease portability of config
  files)
- improved debugging support; debug runtime options can now be set via
  an environment variable
- bugfix: removed debugging code that I forgot to remove before releasing